force-app/main/default/objects/custom_create6__c/custom_create6__c.object-meta.xml
<CustomObject>
    <label>Custom created object6</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects6</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>