force-app/main/default/objects/custom_create6__c/fields/custom_create_6field577__c.field-meta.xml
<CustomField>
    <fullName>custom_create_6field577__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 6field577</label>
    <type>Checkbox</type>
</CustomField>